test/tests/BadBits.expected
BadBits.frost:3:12: error: expected 'frost.core.Bit', but found 'frost.core.Int'
BadBits.frost:8:15: error: expected 'frost.core.Bit', but found 'frost.core.String'
BadBits.frost:15:15: error: expected 'frost.core.Bit', but found 'anonymous.BadBits'
3 errors
