test/tests/BadBits.frost
class BadBits {
    method badIf() {
        if 5 {
        }
    }

    method badWhile() {
        while "hello" {
        }
    }

    method badDo() {
        do {
        }
        while self
    }
}